style.css
/* ... */
.a-header[aria-current="page"]:hover {
    text-decoration: underline solid #323232 0.3rem;
    text-underline-offset: 0.5rem;
}

.inline-material-icons {
    pointer-events: none; /* allows onclick function to work for nav button */
    vertical-align: bottom;
    font-size: 18px !important;
}

ul {
    display: flex;
    list-style: none;
    margin: 0;
    padding: 0;

}

ul.quote-list {
    font-size:24px;
    justify-content: space-between;
}

.card img {
    box-shadow: 10px 10px gray;
    margin: 0px 10px 10px 0px; 
}

.card:hover {
    cursor:pointer;
    transform: scale(1.1);
}

.card:active {
    transform: scale(0.9);
}

.hero {
    display: flex;
    flex-flow: column nowrap;
    background-color: #DDD0C8;
    color:  #323232;
    margin-top: 32px;
}

.hero-contents, .quote-panel, .sign-up-panel, #img-panel {
   padding: 32px;
}

.hero-contents {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    gap: 32px;  
}

.hero-img {
    max-width: 400px;

}

.hero-text-main {
    margin: 32px 0px;
    font-size: 24px;
}

.hero-text-button {
    background-color: #323232;
    color: #fff;
    text-align: center;
    border: 2px solid #323232;
    font-size: 18px;
    transition: all 0.5s ease-out;
}

.hero-text-button:hover, .hero-text-button:focus {
    cursor: pointer;
    background-color: #DDD0C8;
    color: #323232; 
}

.header-logo {
    font-size: 24px;
    
}

.hero-sample {
    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 50%), 0 6px 20px 0 rgb(0 0 0 / 50%);
}

.main {
    display: flex;
    flex: 1;
    flex-flow: column nowrap;
    background-color: #DDD0C8;
}

#img-panel {
    flex: 1;
    background-color: #DDD0C8;
    text-align: center;
    border-top: 1px solid #323232;
    color: #323232;
}

.img-panel-title {
    font-weight: 800;
    font-size: 36px;
    color: #323232;
}

.img-panel-main {
    display: flex;
    justify-content: space-evenly;
    gap: 24px;
    flex-flow: row wrap;
    margin: auto;
    max-width: 95%;
}

.card {
    max-width: 150px;
}

.card-text {
    margin: 12px 0px;
    font-size: 24px;
}

.quote-panel {
    flex: 1;
    background-color: #DDD0C8;
    border-bottom: 1px solid #323232;
}

.quote-panel-title {
    font-weight: 800;
    font-size: 36px;
    color: #323232;
    text-align: center;

}

.quote-container {
    display: flex;
    justify-content: center;
    color: #323232;
    font-size: 1em;
    gap: 5vw;

}

.quote-left, .quote-center, .quote-right {
    display: flex;
    text-align: center;
}

.quote-right {
    font-style: italic;
    transform: translateX(1500%);
    -webkit-transform: translateX(1500%);
}

.quote-left {
    transform: translateX(-1500%);
    -webkit-transform: translateX(-1500%);
}

.quote-center > .quote-list {
    font-size: 0px;
}

.quote-list {
    flex-direction: column;
    gap: 36px;
    white-space: nowrap;
}

.sign-up-panel {
    background-color: #DDD0C8;
}

.modal {
    color: #323232;
    display: flex;
    flex-flow: column wrap;
    justify-content: space-evenly;
    text-align: center;
}

.modal-contents {
    display: flex;
    flex-flow: column nowrap;
    text-align: center;
}

.modal-header {
    font-weight: bold;
    font-size: 36px;
    white-space: nowrap;
}

.modal-text {
    color: #323232;
    font-size: 24px;

}

.copy-link {
    --height: 36px;
    display: flex;
    justify-content: center;
}

.copy-link-input {
    padding: 0 8px;
    font-size: 18px;
    border: 1px solid #323232;
    border-right: none;
    outline: none;
    text-decoration: none;
}

.copy-link-input:hover {
    background: #eeeeee;
}

.copy-link-button {
    flex-shrink: 0;
    width: var(--height);
    height: var(--height);
    display: flex;
    align-items: center;
    justify-content: center;
    background: #dddddd;
    color: #323232;
    outline: none;
    border: 1px solid #323232;
    border-radius: 0px;
    cursor: pointer;
}

.copy-link-button:hover {
    background: #cccccc;
    box-shadow:none;
    transform: none;
}

.main-title {
    text-align: center;
    padding: 2vw;
    border-bottom: 1px solid #323232;
    color: #323232;
}

.about-main {
    gap: 16px;
    display: flex;
    flex: 1;
    flex-flow: row nowrap;
    background-color: #DDD0C8;
}

.about-nav {
    position: relative;
    margin: 0;
    padding: 2vw 0vw;
    flex: 1;  
    align-self: flex-start; 
}

.img-slides {
    display: none;
}

.about-card {
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    text-align: center;
    padding-bottom: 4vw;
    transition: all 0.5s ease-out;
    color: #323232;
    margin: auto;
    min-width: 60%;    
}

.about-img {
    align-self: center;
    width: 250px;
    height: 250px;
    object-fit: contain;
}

.dot {   /*dot for underneath slideshow image showing active selection */
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}

.prev, .next {
    cursor: pointer;
    position: absolute;
    top: 100%;
    width: auto;
    padding: 32px;
    color: #323232;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none;
}

.next {
    right: 10%;
    border-radius: 5%;
}

.prev {
    left: 10%;
    border-radius: 5%;
}
  
/* disable hover for incompatible devices */
@media (hover: hover) {
    .prev:hover, .next:hover {
        background-color: #323232;
        color: #ffffff;
    }
    .a-header:hover, .dropbtn:hover {
        background-color: #fff;
        color: #323232;
    }
}

.text-slides {
    color: #323232;
    font-size: 16px;
    line-height: 1.6;
    padding: 1vw;
    max-width: 95%;
    overflow-y: auto;
    overflow-x: hidden;
    margin: 2vw;
    margin-left: 0;
    border: 3px solid #323232;
    flex: 1;  
    align-self: flex-start; 
    box-shadow: 8px 4px 8px 4px rgb(0 0 0 / 50%); 
}
/* ... */

